Fixed load more on mobile

--- a/frontend/application/style/1-components/responsive/responsive.scss
+++ b/frontend/application/style/1-components/responsive/responsive.scss
@@ -193,6 +193,12 @@
         margin: 0 auto;
       }
     }
+
+    .LoadMoreWrapper {
+      .LoadMoreButton {
+        width: 97%;
+      }
+    }
   }
 
   .tooltip {
